it from source control: http://www.mediawiki.org/wiki/Download_from_SVN

== Configuration changes ==

=== $wgCommandLineDarkBg ==

A new switch used by maintenance scripts (parserTests.php). It lets you specify
if your terminal use a dark background, the colorized output will be made
lighter making things easier to read.

== Major new features ==

== Changes since 1.9 ==

* (bug 7292) Fix site statistics when moving pages in/out of content namespaces
* (bug 6937) Introduce "statistics-footer" message, appended to Special:Statistics
* (bug 8531) Correct local name of Lingála (patch by Raymond)
* (bug 6638) List block flags in block log entries
* New script maintenance/language/checkExtensioni18n.php used to check i18n
  progress in the extension repository.
* Running maintenance/parserTests.php with '--record' option, will now
  automatically attempt to create the required tables
* Made the PLURAL: parser function return singular on -1 per default
* Fixed up the AjaxSearch
* (bugs 5051, 5376) Tooltips and accesskeys no longer require JavaScript
* Added SkinTemplateOutputPageBeforeExec hook before SkinTemplate::outputPage()
  starts page output (http://lists.wikimedia.org/pipermail/wikitech-l/2007-January/028554.html)
* Fix SpecialVersion->formatCredits input. Version and Url parameters should be
  null to be treated properly with isset.
* Page restrictions moved into a new, dedicated table
* Introduce "cascading protection" -- implicit protection on pages transcluded
  into a page protected with this option enabled
* The minimum permissions needed to edit a page in each namespace can now be 
  customized via the $wgNamespaceProtection array. By default, editing pages in
  the MediaWiki namespace requires "editinterface" permission, as before.
* (bug 8567) Added hook RawPageViewBeforeOutput just before the text is blown
  out in action=raw, so extensions might influence the output.
* Correct tooltip accesskey hint for Opera on the Macintosh